--- a/styles.css
+++ b/styles.css
@@ -136,10 +136,6 @@ form{
     display:flex;
 }
 
-.prepArea h1{
-
-}
-
 .prepArea h3{
     margin-right:30px;
 }
@@ -151,18 +147,99 @@ main{
 }
 
 .weeklyLeaderboard{
+    display: flex;
+    flex-direction: column;
     border-radius: 5px;
     background-color: var(--primary);
-    width: 25%;
+    width: 40%;
     margin-right:20px;
-    justify-content: center;
 
+}
+.weeklyLeaderboard .card{
+    overflow: hidden;
+    height:150px;
+    width:85%;
+    margin-left:5%;
+    border-radius: 30px;
+    
+}
+.weeklyLeaderboard .card img{
+    width:120px;
+    height:120px;
+    border-radius: 20px;
+    
+}
+
+.cardContent h1{
+    font-size:45px;
+}
+
+.cardContent h3{
+    font-size:35px;
 }
 
 .mainLeaderboard{
+    display: flex;
+    flex-direction: column;
     border-radius: 5px;
-    width: 75%;
+    width: 60%;
     background-color: var(--primary);
-    justify-content: center;
 
+}
+
+.mainLeaderboard .card{
+    border-radius: 20px;
+    margin-left:5%;
+    width:90%;
+    overflow:hidden;
+}
+
+.mainLeaderboard .card img{
+    width: 120px;
+    height: 120px;
+    border-radius: 20px;
+}
+
+.profileArea{
+    width: 25%;
+}
+
+.profileArea img{
+    width: 300px;
+    height: 300px;
+    border: 3px solid var(--accent);
+    border-radius: 50%;
+    margin-top: 15%;
+}
+
+.profileArea .name{
+    font-size: 45px;
+    font-weight: bold;
+
+}
+
+.profileArea .pointsCard{
+    background-color: var(--accent);
+    font-size: 35px;
+    margin-top:5%;
+
+    font-weight: bold;
+    border-radius: 3px;
+}
+
+.profileArea .streakArea{
+    background-color: var(--secondary);
+    border-radius: 3px;
+    margin-top:5%;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+.recipeHistory{
+    margin-left:5%;
+    width:100%;
+}
+
+.mainContent{
+    display: flex;
 }
