--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,7 @@ body{
     transition-duration: .20s;
     background-color: var(--primary);
 }
+
 form{
     display: flex;
     justify-content: center;
@@ -242,4 +243,17 @@ main{
 
 .mainContent{
     display: flex;
+}
+
+.logout button{
+    width:100%;
+    height:50px;
+    border:none;
+    border-radius: 30px;
+    background-color: rgba(225, 86, 51, 0.521);
+    margin-top:50%;
+}
+
+.logout button:hover{
+    background-color: rgba(172, 63, 36, 0.521) ;
 }
