--- a/styles.css
+++ b/styles.css
@@ -11,14 +11,22 @@
 }
 
 body{
-    background-color: var(--background);
-    
-    margin:10%;
-    margin-top:1%;
+    background: rgb(90,82,230);
+    background: linear-gradient(90deg, rgba(90,82,230,1) 0%, rgba(113,113,218,1) 52%, rgba(49,151,172,0.4450572465314251) 100%);
+    margin:0%;
+    margin-top:0%;
+}
+
+.primaryContent{
+    padding:10%;
+    padding-top:0%;
 }
 
 .navbar{
     color:var(--text);
+    background-color: lightgray;
+    margin-top:0;
+    margin-left:0;
     border-bottom: 5px solid var(--accent);
 }
 .navbarList{
@@ -41,15 +49,16 @@ body{
 
 .navbarList li button{
     transition: .2s;
-    border:3px solid var(--accent);
-    background-color: var(--secondary);
+    border:none;
+    background-color: var(--primary);
     border-radius: 10px;
     font-weight: bold;
+    
 }
 
 .navbarList li button:hover{
     transition-duration: .20s;
-    background-color: var(--primary);
+    background-color: var(--accent);
 }
 
 .form{
@@ -107,16 +116,23 @@ body{
 
 
 .card{
+    transition: 3s;
     color:var(--text);
     width: 99%;
-    margin-bottom: 1%;
-    border:3px solid var(--accent);
+    margin-bottom: 3%;
+    border:none;
+    box-shadow: 0px 0px 49px 0px rgba(0,0,0,0.5);
     border-radius: 3px;
     background-color: var(--secondary);
     display: flex;
-    overflow:scroll;
+    overflow:hidden;
     overflow-x:hidden;
-    max-height: 240px;
+    height:110px;
+}
+
+.animationTrigger{
+    transition: 3s;
+    height:500px;
 }
 
 .card img{
