Beautified the website

--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,19 @@
+@import url('https://fonts.googleapis.com/css2?family=Asap&family=Maitree:wght@300&family=Raleway:wght@900&display=swap');
+
 :root{
     --text: #0e0e20;
     --background: #e2e3f3;
     --primary: #7779c0;
     --secondary: #eaeaf5;
     --accent: #5e63b5;
-    
-
-
+    --fontHeading: 'Raleway', sans-serif;
+    --fontMiddle: 'Asap', sans-serif;
+    --fontSmall: 'Maitree', serif;
 
 }
-
 body{
-    background: rgb(90,82,230);
-    background: linear-gradient(90deg, rgba(90,82,230,1) 0%, rgba(113,113,218,1) 52%, rgba(49,151,172,0.4450572465314251) 100%);
+    background: rgb(55,178,98);
+    background: linear-gradient(90deg, rgba(55,178,98,1) 0%, rgba(171,238,183,1) 100%);
     margin:0%;
     margin-top:0%;
 }
@@ -27,33 +28,43 @@ body{
     background-color: lightgray;
     margin-top:0;
     margin-left:0;
-    border-bottom: 5px solid var(--accent);
+    border-bottom: 5px solid;
 }
 .navbarList{
     list-style-type: none;
     margin:0;
-    margin-bottom: 5px;
+    margin-bottom: 0px;
     padding:0;
     overflow: hidden;
     top: 0px;
     left: 0px;
+    gap:20px;
+
 }   
+.thisMightBreak{
+    display: flex;
+    justify-content: right;
+}
+.thisMightBreak li button{
+    padding-left:30px;
+    padding-right:30px;
+}
 
 .navbarList li, .navbarList li button{
     color:var(--text);
+    font-family: var(--fontHeading);
+    background-color: lightgray;
     font-size: 35px;
-    float:left;
-    margin-left:3%;
-    margin-right:.5%;
+    float:right;
 }
 
 .navbarList li button{
     transition: .2s;
     border:none;
-    background-color: var(--primary);
-    border-radius: 10px;
     font-weight: bold;
-    
+    border-right:.5px solid black;
+    border-left:.5px solid black;   
+
 }
 
 .navbarList li button:hover{
@@ -73,22 +84,28 @@ body{
     height:60px;
     width:95%;
     box-sizing: border-box;
-    padding:0px;
+    padding-left:5px;
     font-size: 30px;
     font-weight:bold;
     border:3px solid var(--accent);
-    border-radius: 5px;
-    background-color:var(--secondary);
+    border-radius: 30px;
+    background: lightgray;
+    font-family: var(--fontHeading);
+
 }
 
 #searchButton{
     color:var(--text);
     transition: .20s;
     height:60px;
+    padding-left:30px;
+    padding-right:30px;
     margin-left:5px;
+    font-family: var(--fontHeading);
+    font-size:30px;
     border: 3px solid var(--primary);
     background-color: var(--secondary);
-    font-size: 15px;
+    font-size: 25px;
     font-weight: bold;
     border-radius: 20px;
 }
@@ -122,7 +139,7 @@ body{
     margin-bottom: 3%;
     border:none;
     box-shadow: 0px 0px 49px 0px rgba(0,0,0,0.5);
-    border-radius: 3px;
+    border-radius: 15px;
     background-color: var(--secondary);
     display: flex;
     overflow:hidden;
@@ -139,10 +156,24 @@ body{
     width: 200px;
     height: 100px;
     margin-right:10px;
-    border:3px solid var(--accent);
-    border-radius: 5px;
+    border:3px solid black;
+    border-radius: 15px;
     margin-top:1%;
     margin-left: 2%;
+}
+.card h1{
+    font-family: var(--fontHeading);
+
+}
+.card h2{
+    font-family: var(--fontHeading);
+    color: #28ad5d;
+}
+.card h2 span{
+
+}
+.card h3{
+    font-family: var(--fontMiddle);
 }
 .card h1, h2, h3, p{
     margin: 2px;
