--- a/signInStyle.css
+++ b/signInStyle.css
@@ -58,7 +58,8 @@
   
   .container {
     display: flex;
-    background:  #e2e3f3;
+    background: rgb(55,178,98);
+    background: linear-gradient(90deg, rgba(55,178,98,1) 0%, rgba(171,238,183,1) 100%);
     height: 100vh;
     width: 100%;
     align-items: center;
